--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "moment": "1.7.2",
     "colors": "0.6.0-1",
     "minimatch": "0.2.7",
-    "stalker": "0.0.20"
+    "stalker": "0.0.20",
+    "mkdirp": "~0.3.5"
   }
 }
