--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "colors": "0.6.0-1",
     "minimatch": "0.2.7",
     "stalker": "0.0.20",
-    "mkdirp": "~0.3.5"
+    "mkdirp": "~0.3.5",
+    "graceful-fs": "~2.0.0"
   }
 }
